cs-app/deploy/service.yaml
---
---
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: cs-app
  labels:
    app: cs-app
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8002
    protocol: TCP
  selector:
    app: cs-app
