cs-app/deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs-app
  namespace: staging
spec:
  ingressClassName: external-ingress-nginx
  rules:
  - host: cs-app.thedeltafarmers.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cs-app
            port:
              number: 8002
